Revert build to working version